continuation of work on wall page and associated component

--- a/backend/api/comment/models/comment.settings.json
+++ b/backend/api/comment/models/comment.settings.json
@@ -16,8 +16,8 @@
       "type": "richtext"
     },
     "message": {
-      "model": "message",
-      "via": "comments"
+      "via": "comments",
+      "model": "message"
     }
   }
 }
