--- a/backend/api/message/models/message.settings.json
+++ b/backend/api/message/models/message.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "messages",
   "info": {
-    "name": "message"
+    "name": "message",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,7 +19,7 @@
       "type": "richtext"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
