install axios and create service fetchAPI for message and comment + refacto

--- a/backend/api/comment/models/comment.settings.json
+++ b/backend/api/comment/models/comment.settings.json
@@ -13,11 +13,15 @@
   "pluginOptions": {},
   "attributes": {
     "content": {
-      "type": "richtext"
+      "type": "richtext",
+      "required": true
     },
     "message": {
       "via": "comments",
       "model": "message"
+    },
+    "pseudo": {
+      "type": "string"
     }
   }
 }
