--- a/backend/api/comment/models/comment.settings.json
+++ b/backend/api/comment/models/comment.settings.json
@@ -14,14 +14,19 @@
   "attributes": {
     "content": {
       "type": "richtext",
-      "required": true
+      "required": true,
+      "minLength": 2,
+      "maxLength": 500
     },
     "message": {
       "via": "comments",
       "model": "message"
     },
     "pseudo": {
-      "type": "string"
+      "type": "string",
+      "minLength": 2,
+      "maxLength": 30,
+      "required": true
     }
   }
 }
