--- a/backend/api/message/models/message.settings.json
+++ b/backend/api/message/models/message.settings.json
@@ -28,9 +28,7 @@
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "files",
-        "images",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": false,
