unit test with creat post and upload img ok

--- a/backend/api/message/models/message.settings.json
+++ b/backend/api/message/models/message.settings.json
@@ -31,17 +31,12 @@
         "images"
       ],
       "plugin": "upload",
-      "required": false,
+      "required": true,
       "pluginOptions": {}
     },
     "comments": {
       "via": "message",
       "collection": "comment"
-    },
-    "users_permissions_user": {
-      "plugin": "users-permissions",
-      "model": "user",
-      "via": "messages"
     }
   }
 }
