--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -10,28 +10,9 @@
     "timestamps": true
   },
   "attributes": {
-    "username": {
-      "type": "string",
-      "minLength": 3,
-      "unique": true,
-      "configurable": false,
-      "required": true
-    },
-    "email": {
-      "type": "email",
-      "minLength": 6,
-      "configurable": false,
-      "required": true
-    },
     "provider": {
       "type": "string",
       "configurable": false
-    },
-    "password": {
-      "type": "password",
-      "minLength": 6,
-      "configurable": false,
-      "private": true
     },
     "resetPasswordToken": {
       "type": "string",
@@ -59,9 +40,24 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "messages": {
-      "via": "users_permissions_user",
-      "collection": "message"
+    "email": {
+      "type": "email",
+      "minLength": 6,
+      "required": true
+    },
+    "password": {
+      "type": "password",
+      "minLength": 6,
+      "private": true,
+      "maxLength": 10,
+      "required": true
+    },
+    "username": {
+      "type": "string",
+      "minLength": 2,
+      "unique": true,
+      "required": true,
+      "maxLength": 50
     }
   }
 }
